# raspberryPi

./: CMakeLists.txt  rebuild.sh
include/: client.h  crc16.h  database.h  hash.h  main.h  process.h  queue.h  rawdata.h  seed.h  server.h  systime.h  var.h
src/: client.c  crc16.c  database.c  hash.c  main.c  process.c  queue.c  rawdata.c  seed.c  server.c  systime.c  var.c
